--- a/style.css
+++ b/style.css
@@ -1,93 +1,119 @@
 * {
     font-family: 'Noto Sans', sans-serif;
 }
+
+body {
+    margin: 0;
+}
+
 a {
     text-decoration: none;
 }
 
-.et-hero-tabs,
-.et-slide {
+.section {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    height: 100vh;
-    position: relative;
-    background: #eee;
-    text-align: center;
-    padding: 0 2em;
+    /*align-items: center;*/
+    height: 80vh;
+    background: #7383c1;
+    /*text-align: center;*/
 }
-.et-hero-tabs h1,
-.et-slide h1 {
+
+.section h1 {
     font-size: 2rem;
     margin: 0;
     letter-spacing: 1rem;
 }
-.et-hero-tabs h3,
-.et-slide h3 {
+
+.section h3 {
     font-size: 1rem;
     letter-spacing: 0.3rem;
     opacity: 0.6;
 }
 
-.et-hero-tabs-container {
+.navigationMenu {
     display: flex;
     flex-direction: row;
-    position: absolute;
-    bottom: 0;
+    position: fixed;
     width: 100%;
     height: 70px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    background: #fff;
+    background: #200116;
     z-index: 10;
 }
-.et-hero-tabs-container--top {
-    position: fixed;
-    top: 0;
-}
 
-.et-hero-tab {
+.navbar {
     display: flex;
     justify-content: center;
     align-items: center;
     flex: 1;
-    color: #000;
+    color: #f9f5f5;
     letter-spacing: 0.1rem;
     transition: all 0.5s ease;
     font-size: 0.8rem;
 }
-.et-hero-tab:hover {
+
+.navbar:hover {
     color: white;
-    background: rgba(102, 177, 241, 0.8);
+    background: #4C0827;
     transition: all 0.5s ease;
 }
 
-.et-hero-tab-slider {
-    position: absolute;
-    bottom: 0;
-    width: 0;
-    height: 6px;
-    background: #66B1F1;
-    transition: left 0.3s ease;
+fieldset {
+    max-width: 355px;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 15px 70px;
 }
 
-@media (min-width: 800px) {
-    .et-hero-tabs h1,
-    .et-slide h1 {
-        font-size: 3rem;
-    }
-    .et-hero-tabs h3,
-    .et-slide h3 {
-        font-size: 1rem;
-    }
-
-    .et-hero-tab {
-        font-size: 1rem;
-    }
+legend {
+    border: 1px solid black;
+    border-radius: 6px;
 }
 
+input {
+    border: 1px solid black;
+    border-radius: 5px;
+}
 
-/*#home-image {*/
-/*    max-width: 100%;*/
-/*    height: auto;*/
-/*}*/
+.section1 {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    padding: 0 25px 5px;
+}
+
+.section2 {
+    display: flex;
+    flex-direction: row;
+}
+
+.section2Input {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    padding: 0 29px 5px;
+}
+
+.section3 {
+    text-align: center;
+}
+
+.section3Input {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    padding: 5px 29px 5px;
+}
+
+.section4 {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+}
+
+.submitContainer {
+    text-align: center;
+}
+
