--- a/style.css
+++ b/style.css
@@ -10,62 +10,6 @@ a {
     text-decoration: none;
 }
 
-.section {
-    display: flex;
-    flex-direction: column;
-    /*justify-content: center;*/
-    height: 90vh;
-    background: #eee;
-}
-
-#home {
-    height: 100vh;
-    /*background-image: linear-gradient(#3A015C, #4F0147, #35012C, #290025);*/
-    /*background-image: radial-gradient(#eff1f3, #dbd3d8, #223843, #d8b4a0);*/
-    background-color: #eeeeee;
-    background-repeat: no-repeat;
-    background-size: cover;
-    justify-content: center;
-}
-
-#about {
-    background-image: url("media/second.png");
-    background-repeat: no-repeat;
-    background-size: 900px;
-    background-color: black;
-}
-
-#tour {
-    background-image: url("media/obey.png");
-    background-repeat: repeat;
-    background-position: center;
-    background-size: 35%;
-}
-
-#merch {
-    background-image: url("media/logoMantra.png");
-    background-repeat: repeat;
-}
-
-#contact {
-    height: 50vh;
-    background-image: url("media/bmth-wallpaper.png");
-    background-repeat: repeat;
-    background-size: 50%;
-}
-
-.section h1 {
-    font-size: 2rem;
-    margin: 0;
-    letter-spacing: 1rem;
-}
-
-.section h2 {
-    font-size: 1rem;
-    letter-spacing: 0.3rem;
-    opacity: 0.6;
-}
-
 .navigationMenu {
     display: flex;
     flex-direction: row;
@@ -94,6 +38,32 @@ a {
     transition: all 0.5s ease;
 }
 
+.section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 65vh;
+    background: #eee;
+}
+
+.section h1 {
+    font-size: 2rem;
+    margin: 0;
+    letter-spacing: 1rem;
+}
+
+.section h2 {
+    font-size: 1rem;
+    letter-spacing: 0.3rem;
+    opacity: 0.6;
+}
+
+#logoMantra {
+    width: 20vh;
+    height: 20vh;
+}
+
 fieldset {
     max-width: 355px;
     border: 1px solid black;
@@ -111,30 +81,13 @@ input {
     border-radius: 5px;
 }
 
-.square-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+.imgContainer {
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
 }
 
-.square {
-    position: relative;
-    height: 30vh;
-    width: 30vh;
-    margin: 15px;
-    border: 1px solid;
-    border-radius: 30px;
-    box-sizing: border-box;
-    background-color: white;
-}
-
-.square .content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.imgAlbum {
+    width: 25vh;
+    height: 25vh;
+    padding: 4vh;
 }
